# radtract

./: .gitattributes  .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  example.ipynb  pyproject.toml  requirements.txt  setup.py
radtract/: __init__.py  classification.py  features.py  parcellation.py  prediction.py  pyrad.yaml  pyrad_D.yaml  pyrad_nofilter.yaml  pyrad_nofilter_D.yaml  tractdensity.py  tractfiltering.py  utils.py
resources/: radtract_overview.png.license
resources/example/: CST_right.trk  dwi.bvals  dwi.bvecs
tests/: test_radtract.py
tests/test_data/: centerline_features.csv  centerline_features.pkl  hyperplane_features.csv  hyperplane_features.joblib  hyperplane_features.pkl  mirp_features.pkl  test_tract.trk
