# Copyright © 2023 German Cancer Research Center (DKFZ), Division of Medical Image Computing
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radtract"
version = "0.1.3"
authors = [
  { name="Peter Neher", email="p.neher@dkfz.de" },
]
description = "Radiomics Tractometry for advanced along-tract analysis of diffusion MRI"
readme = "README.md"
dependencies = [
    'numpy',
    'pandas',
    'argparse',
    'scikit-image',
    'scikit-learn',
    'nibabel',
    'vtk',
    'dipy',
    'pyradiomics',
]
license = { file="LICENSES/Apache-2.0.txt" }
requires-python = ">=3.7"

classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
    'Development Status :: 5 - Production/Stable',
]

[project.scripts]
radtract_parcellate = "radtract.parcellation:main"
radtract_features = "radtract.features:main"

[tool.setuptools.package-data]
radtract = ["*.yaml"]

[tool.setuptools.packages.find]
include = ["radtract*"]
exclude = ["LICENSES*", "tests*"]
