# Copyright © 2023 German Cancer Research Center (DKFZ), Division of Medical Image Computing
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radtract"
version = "0.1.7"
authors = [
  { name="Peter Neher", email="p.neher@dkfz-heidelberg.de" },
]
maintainers = [
  { name="Peter Neher", email="p.neher@dkfz-heidelberg.de" },
]

description = "Radiomic Tractometry for advanced along-tract analysis of diffusion-weighted MRI"
keywords = ["tractometry", "radiomics", "tractography", "diffusion-weighted MRI"]

readme = "README.md"
dependencies = [
    'numpy',
    'pandas',
    'argparse',
    'scikit-image',
    'scikit-learn',
    'nibabel',
    'vtk',
    'dipy',
    'pyradiomics',
]
license = { file="LICENSES/Apache-2.0.txt" }
requires-python = ">=3.8"

classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
    'Development Status :: 5 - Production/Stable',
]

[project.urls]
Repository = "https://github.com/MIC-DKFZ/radtract"

[project.scripts]
radtract_parcellate = "radtract.parcellation:main"
radtract_features = "radtract.features:main"
radtract_tdi = "radtract.tractdensity:main"

[tool.setuptools.package-data]
radtract = ["*.yaml"]

[tool.setuptools.packages.find]
include = ["radtract*"]
exclude = ["LICENSES*", "tests*"]
