# Copyright © 2023 German Cancer Research Center (DKFZ), Division of Medical Image Computing
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radtract"
version = "0.2.4"
authors = [
  { name="Peter Neher", email="p.neher@dkfz-heidelberg.de" },
]
maintainers = [
  { name="Peter Neher", email="p.neher@dkfz-heidelberg.de" },
]

description = "Radiomic Tractometry for advanced along-tract analysis of diffusion-weighted MRI"
keywords = ["tractometry", "radiomics", "tractography", "diffusion-weighted MRI"]

readme = "README.md"
dependencies = [
    'numpy>=1.26,<2.0',
    'pandas',
    'argparse',
    'scikit-image',
    'scikit-learn',
    'nibabel',
    'vtk',
    'dipy',
    'pyradiomics',
    'mirp; python_version>="3.11"',
    'cmdint',
    'fury',
    'seaborn'
]
license = { file="LICENSES/Apache-2.0.txt" }
requires-python = ">=3.10"

classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
    'Development Status :: 5 - Production/Stable',
]

[project.urls]
Repository = "https://github.com/MIC-DKFZ/radtract"

[project.scripts]
radtract_parcellate = "radtract.parcellation:main"
radtract_estimate_num_parcels = "radtract.parcellation:num_parcels_for_set"
radtract_features = "radtract.features:main"
radtract_tdi = "radtract.tractdensity:main"

radtract_filter_density = "radtract.tractfiltering:density_filter_cmdentry"
radtract_filter_visitationcount = "radtract.tractfiltering:visitation_count_filter_cmdentry"
radtract_filter_maskoverlap = "radtract.tractfiltering:mask_overlap_filter_cmdentry"
radtract_filter_endpoints = "radtract.tractfiltering:endpoint_filter_cmdentry"
radtract_filter_length = "radtract.tractfiltering:length_filter_cmdentry"
radtract_filter_curvature = "radtract.tractfiltering:curvature_filter_cmdentry"

[tool.setuptools.package-data]
radtract = ["*.yaml"]

[tool.setuptools.packages.find]
include = ["radtract*"]
exclude = ["LICENSES*", "tests*"]
